# agent-studio

./: AGENTS.md  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/skills/: api.rs  commands.rs  lock_file.rs  mod.rs  types.rs
src/components/: CommandPalette.tsx  Dashboard.tsx  DetailPanel.tsx  FixConfigModal.tsx  GlobalSearch.tsx  HealthCheck.tsx  Navigation.tsx
src/components/SkillStore/: AgentTargetSelector.tsx  InstallProgressModal.tsx  SkillBrowser.tsx  SkillDetailPanel.tsx  SkillSearchBar.tsx  SkillStore.tsx  index.ts
src/components/ui/: CommandItem.tsx  ConfirmDialog.tsx  ContextMenu.tsx  CreateEntityDialog.tsx  EntityActionsMenu.tsx  KeyboardHint.tsx  KeyboardShortcutsModal.tsx  Panel.tsx  ProjectSelectDialog.tsx  RenameDialog.tsx  SearchInput.tsx  SectionHeader.tsx  Toast.tsx  ToastContainer.tsx
src/hooks/: useHealthIssues.ts  useKeyboardNavigation.ts
src/lib/: api.ts  skillsApi.ts  skillsTypes.ts  types.ts
src/store/: appStore.ts
