[package]
name = "agent-studio"
version = "0.1.0"
description = "Manage coding assistant configurations"
authors = ["you"]
edition = "2021"

[lib]
name = "agent_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
notify = "6"
tokio = { version = "1", features = ["full"] }
